Fixed PDF bugs and added user tips

--- a/popup.html
+++ b/popup.html
@@ -120,10 +120,11 @@
     <button id="prepareprint" class="action-btn" role="button">Prepare for Print</button>
     <div id="status"></div>
     <div class="tip">
-      <b>Tip:</b> For a cleaner PDF without the page URL, open the Chrome print dialog, click <b>More Settings</b>, and uncheck <b>"Headers and footers"</b> before saving.
+  <b>Tip:</b> For a cleaner PDF without the page URL, open the Chrome print dialog, click <b>More Settings</b>, and uncheck <b>"Headers and footers"</b> before saving.<br><br>
+  <b>PDF Page Size:</b> For best results, select <b>A4</b> as the paper size in the print dialog.<br><br>
+  <b>Note:</b> After saving as PDF, the file may appear in your files immediately, but it might still be downloading in the background. If you get an <b>error opening the PDF</b>, wait a minute and try again.
     </div>
   </div>
-  <script src="jspdf.umd.min.js"></script>
   <script src="popup.js"></script>
 </body>
 </html>
